addressed code review comments.  started adding server side tests.